Got publication to RabbitMQ working.

--- a/engine-api/pom.xml
+++ b/engine-api/pom.xml
@@ -67,6 +67,10 @@
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.rabbitmq</groupId>
+      <artifactId>amqp-client</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
