--- a/engine-api/src/main/resources/reference.conf
+++ b/engine-api/src/main/resources/reference.conf
@@ -21,4 +21,18 @@ engine : {
       }
     }
   }
+  queue : {
+    amqp : {
+      host : "localhost"
+      port: 5672
+      vhost : "heystk"
+      user : "heystk"
+      password : "heystk"
+      api : {
+        exchange-name : "from-api"
+        queue-name : "from-api-to-process"
+        routing-key : "to-process"
+      }
+    }
+  }
 }
