--- a/heystk/pom.xml
+++ b/heystk/pom.xml
@@ -31,6 +31,7 @@
     <mysql.version>6.0.6</mysql.version>
     <c3p0.version>0.9.5.2</c3p0.version>
     <commons.codec.version>1.10</commons.codec.version>
+    <amqp.version>4.1.0</amqp.version>
   </properties>
 
   <repositories>
@@ -116,6 +117,11 @@
         <groupId>com.mchange</groupId>
         <artifactId>c3p0</artifactId>
         <version>${c3p0.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.rabbitmq</groupId>
+        <artifactId>amqp-client</artifactId>
+        <version>${amqp.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
