Made TestGeneratorAgent delay configurable.

--- a/agent-common/src/main/resources/reference.conf
+++ b/agent-common/src/main/resources/reference.conf
@@ -7,6 +7,11 @@ agent: {
   file-reader : {
     delay : 1000
   }
+  test-generator : {
+    string : "foo bar nuggets"
+    count : 200
+    delay : 30
+  }
 }
 engine : {
   url : "http://localhost:8080/engine"
