--- a/engine-api/pom.xml
+++ b/engine-api/pom.xml
@@ -71,6 +71,11 @@
       <groupId>com.rabbitmq</groupId>
       <artifactId>amqp-client</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.fustigatedcat.heystk.common</groupId>
+      <artifactId>heystk-common</artifactId>
+      <version>${project.version}</version>
+    </dependency>
   </dependencies>
 
   <build>
