--- a/heystk-common/pom.xml
+++ b/heystk-common/pom.xml
@@ -23,6 +23,10 @@
       <groupId>org.scala-lang</groupId>
       <artifactId>scala-dist</artifactId>
     </dependency>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
