--- a/heystk/pom.xml
+++ b/heystk/pom.xml
@@ -16,6 +16,7 @@
     <module>../engine-api</module>
     <module>../engine</module>
     <module>../heystk-common</module>
+    <module>../system-ui</module>
   </modules>
 
   <properties>
@@ -34,6 +35,7 @@
     <c3p0.version>0.9.5.2</c3p0.version>
     <commons.codec.version>1.10</commons.codec.version>
     <amqp.version>4.1.0</amqp.version>
+    <lift.version>3.1.0-M2</lift.version>
   </properties>
 
   <repositories>
@@ -86,9 +88,14 @@
         <version>${commons.codec.version}</version>
       </dependency>
       <dependency>
+        <groupId>net.liftweb</groupId>
+        <artifactId>lift-mapper_${scala.maj.version}</artifactId>
+        <version>${lift.version}</version>
+      </dependency>
+      <dependency>
         <groupId>com.typesafe.akka</groupId>
         <artifactId>akka-actor_${scala.maj.version}</artifactId>
-        <version>2.4.17</version>
+        <version>${akka.actor.version}</version>
       </dependency>
       <dependency>
         <groupId>org.json4s</groupId>
