Issue #8 Working on getting a login working.

--- a/system-ui/pom.xml
+++ b/system-ui/pom.xml
@@ -48,6 +48,10 @@
       <groupId>com.mchange</groupId>
       <artifactId>c3p0</artifactId>
     </dependency>
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
