Fixing issue scala-library-all vs. scala-dist for a dependency. Also migrated all DB scripts into the heystk-db module. Should make it simpler to do a DDL.

--- a/agent-common/pom.xml
+++ b/agent-common/pom.xml
@@ -21,7 +21,8 @@
   <dependencies>
     <dependency>
       <groupId>org.scala-lang</groupId>
-      <artifactId>scala-dist</artifactId>
+      <artifactId>scala-library-all</artifactId>
+      <type>pom</type>
     </dependency>
     <dependency>
       <groupId>org.scalatest</groupId>
