--- a/agent/pom.xml
+++ b/agent/pom.xml
@@ -21,7 +21,8 @@
   <dependencies>
     <dependency>
       <groupId>org.scala-lang</groupId>
-      <artifactId>scala-dist</artifactId>
+      <artifactId>scala-library-all</artifactId>
+      <type>pom</type>
     </dependency>
     <dependency>
       <groupId>com.fustigatedcat.heystk.agent.common</groupId>
