--- a/heystk-common/pom.xml
+++ b/heystk-common/pom.xml
@@ -25,6 +25,10 @@
       <type>pom</type>
     </dependency>
     <dependency>
+      <groupId>com.typesafe</groupId>
+      <artifactId>config</artifactId>
+    </dependency>
+    <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
     </dependency>
