--- a/agent/pom.xml
+++ b/agent/pom.xml
@@ -11,7 +11,7 @@
   <parent>
     <groupId>com.fustigatedcat.heystk</groupId>
     <artifactId>parent</artifactId>
-    <version>0.2</version>
+    <version>0.3-SNAPSHOT</version>
     <relativePath>../heystk/pom.xml</relativePath>
   </parent>
 
