--- a/system-ui/pom.xml
+++ b/system-ui/pom.xml
@@ -12,7 +12,7 @@
   <parent>
     <groupId>com.fustigatedcat.heystk</groupId>
     <artifactId>parent</artifactId>
-    <version>0.2</version>
+    <version>0.3-SNAPSHOT</version>
     <relativePath>../heystk/pom.xml</relativePath>
   </parent>
 
