Issue-#39 Fixing issue where mysql requires useSSL.

--- a/heystk-db/src/main/liquibase/liquibase.properties
+++ b/heystk-db/src/main/liquibase/liquibase.properties
@@ -1,7 +1,7 @@
 contexts: heystk
 changeLogFile: /src/main/liquibase/liquibase.root.xml
 driver: com.mysql.cj.jdbc.Driver
-url: jdbc:mysql://localhost:3306/heystk?serverTimezone=UTC&nullNamePatternMatchesAll=true
+url: jdbc:mysql://localhost:3306/heystk?serverTimezone=UTC&nullNamePatternMatchesAll=true&useSSL=false
 username: root
 password:
 verbose: true
